--- a/public/assets/styles/app.css
+++ b/public/assets/styles/app.css
@@ -40,7 +40,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #938d8d;
   }
   
   li {
