--- a/public/templates/about.html.twig
+++ b/public/templates/about.html.twig
@@ -7,10 +7,12 @@
 <div class="row" style="margin-top: 20px;">
     <div class="column">Kursen Objektorienterade webbteknologier, a.k.a. mvc, fokuserar på objektorienterade programmeringstekniker i programmeringsspråket PHP. Klassiska objektorienterade konstruktioner hanteras tillsammans med objektorienterad programmering i webbaserat ramverk tillsammans med databaser samt enhetstestning</div>
     <div class="column">
-    <a href="{{ asset('img/symfony.jpg')}}"
-         data-lightbox="symfony"
-         data-title="Symfony">
-          <img src="{{ asset('img/symfony.jpg')}}" alt="Symfony" style="width:100%">
+    <a href="{{"https://github.com/Polskii814/mvcV2-report"}}"
+         data-lightbox="Github"
+         data-title="Github">
+          <img src="{{ asset('img/GitHub.jpeg')}}" alt="GitHub" style="width:100%">
+    <a href="{{"https://github.com/dbwebb-se/mvc"}}">
+        <img src="{{ asset('img/mvc.jpg')}}" alt="Mvc" style="width:100%">
     </div>
 </div>
 {% endblock %}
